--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 PORT=8000
-DB_HOST=localhost
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
-DB_NAME=your_db_name
-DB_PORT=3306
-DB_CONNECTION_LIMIT=10
+HEALTH_BASE_PATH=/
+HEALTH_HOST=localhost
+HEALTH_USER=your_user
+HEALTH_PASSWORD=your_password
+HEALTH_DATABASE=your_database
+HEALTH_PORT=3306
+HEALTH_CONNECTION_LIMIT=10
 SESSION_SECRET=your_session_secret
